集成 HPSocket 库并重构相关类
集成 HPSocket 库并重构相关类

更新 `.gitignore` 文件，添加 `JHPTcpClient/Debug` 等目录以排除构建文件。
`JHPTcpClient.aps` 和 `JHPTcpServer.aps` 的二进制内容发生变化。
修改 `JHPTcpClient.vcxproj` 和 `JHPTcpServer.vcxproj` 的编译选项，添加 `HPSOCKET_STATIC_LIB`。
在项目文件中添加 HPSocket 库的额外库目录和依赖项。
重构 `HPTcpClient` 类为 `TcpClientSystem`，并更新相关方法以支持 HPSocket。
更新 `TcpServerSystem` 的头文件引用路径，确保正确包含 HPSocket 文件。
整体上，这些更改集中在集成 HPSocket 库和更新项目配置。

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ JHPTcpServer/JHPTcpServer/Release
 JHPTcpServer/JHPTcpServer/x64
 JHPTcpServer/Release
 JHPTcpServer/x64
+/JHPTcpClient/Debug
+/JHPTcpClient/JHPTcpClient/Debug
