--- a/JHPTcpServer/JHPTcpServer.vcxproj.filters
+++ b/JHPTcpServer/JHPTcpServer.vcxproj.filters
@@ -54,9 +54,6 @@
     <ClInclude Include="JHPTcpServerArchitecture.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="TcpServerSystem.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="..\SDK\Include\HPSocket\HPServerEvent.h">
       <Filter>SDK</Filter>
     </ClInclude>
@@ -64,6 +61,9 @@
       <Filter>SDK</Filter>
     </ClInclude>
     <ClInclude Include="..\SDK\BufferPtr.h">
+      <Filter>SDK</Filter>
+    </ClInclude>
+    <ClInclude Include="..\SDK\Include\HPSocket\TcpServerSystem.h">
       <Filter>SDK</Filter>
     </ClInclude>
   </ItemGroup>
@@ -83,13 +83,13 @@
     <ClCompile Include="JHPTcpServerArchitecture.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="TcpServerSystem.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="..\SDK\helper.cpp">
       <Filter>SDK</Filter>
     </ClCompile>
     <ClCompile Include="..\SDK\BufferPtr.cpp">
+      <Filter>SDK</Filter>
+    </ClCompile>
+    <ClCompile Include="..\SDK\Include\HPSocket\TcpServerSystem.cpp">
       <Filter>SDK</Filter>
     </ClCompile>
   </ItemGroup>
