重构TCP客户端和服务器系统。在 `JHPTcpClient.vcxproj` 中添加新的头文件和源文件，移除旧的 `HPTcpClient` 相关文件。实现 `JHPTcpClientArchitecture` 类的单例模式，并注册 `TcpClientSystem`。新增多个事件类以增强事件驱动功能。更新 `TcpClientSystem` 的事件处理方法，调整 `TcpServerSystem` 的格式和注释，确保代码一致性。

--- a/JHPTcpClient/JHPTcpClient.vcxproj
+++ b/JHPTcpClient/JHPTcpClient.vcxproj
@@ -191,20 +191,23 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\SDK\Include\HPSocket\HPClientEvent.h" />
     <ClInclude Include="..\SDK\Include\HPSocket\HPSocket.h" />
-    <ClInclude Include="..\SDK\Include\HPSocket\HPTcpClient.h" />
     <ClInclude Include="..\SDK\Include\HPSocket\HPTypeDef.h" />
     <ClInclude Include="..\SDK\Include\HPSocket\SocketInterface.h" />
+    <ClInclude Include="..\SDK\Include\HPSocket\TcpClientSystem.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="JHPTcpClient.h" />
+    <ClInclude Include="JHPTcpClientArchitecture.h" />
     <ClInclude Include="JHPTcpClientDlg.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\SDK\Include\HPSocket\HPTcpClient.cpp" />
+    <ClCompile Include="..\SDK\Include\HPSocket\TcpClientSystem.cpp" />
     <ClCompile Include="JHPTcpClient.cpp" />
+    <ClCompile Include="JHPTcpClientArchitecture.cpp" />
     <ClCompile Include="JHPTcpClientDlg.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
