增强用户界面交互性和代码可读性
增强用户界面交互性和代码可读性

在 `JHPTcpClient.vcxproj` 中添加了新的头文件和源文件引用，以支持新功能。
在 `JHPTcpClientDlg.cpp` 中实现了多个事件处理函数和按钮点击事件，提升了用户界面的交互性。
在 `JHPTcpClientDlg.h` 中新增控件成员变量，并声明相应的事件处理函数。
在 `Resource.h` 中定义了新的控件 ID。
更新了 `HPSocket.h` 的文档注释，改进了代码可读性。
修改了 `TcpClientSystem.h` 和 `TcpServerSystem.cpp` 中的成员变量命名，以提高一致性。
在 `TcpServerSystem.cpp` 中更新了事件处理逻辑，确保服务器启动和停止时正确处理连接。
添加了对新事件的注册和注销，确保在对话框关闭时正确清理资源。
实现了发送按钮的处理逻辑，允许用户通过界面发送数据。
添加了状态管理逻辑，以便在不同应用状态下启用或禁用按钮。

--- a/JHPTcpClient/JHPTcpClient.vcxproj
+++ b/JHPTcpClient/JHPTcpClient.vcxproj
@@ -191,6 +191,7 @@
     </ResourceCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="..\SDK\helper.h" />
     <ClInclude Include="..\SDK\Include\HPSocket\HPClientEvent.h" />
     <ClInclude Include="..\SDK\Include\HPSocket\HPSocket.h" />
     <ClInclude Include="..\SDK\Include\HPSocket\HPTypeDef.h" />
@@ -205,6 +206,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\SDK\helper.cpp" />
     <ClCompile Include="..\SDK\Include\HPSocket\TcpClientSystem.cpp" />
     <ClCompile Include="JHPTcpClient.cpp" />
     <ClCompile Include="JHPTcpClientArchitecture.cpp" />
